--- a/06.html
+++ b/06.html
@@ -88,16 +88,16 @@
           <li> Cardboard </li>
           <li> Hollow </li>
           <li> Allows access to what's inside </li>
+          <li> <b>Has an element of personality and temperament</b> </li>
           </ul>
         </td>
         <td>
           <ul>
-          <li> Throw/Shake </li>
-          <li> Topple </li>
-          <li> Spin </li>
-          <li> Contains something </li>
-          <li> Open/Close lid </li>
-          <li> Roll </li>
+          <li> Pat/Sayang </li>
+          <li> Talk to it </li>
+          <li> Bring it around </li>
+          <li> Feed </li>
+          <li> Hug </li>
           </ul>
        </td>
       </tr>
