--- a/06.html
+++ b/06.html
@@ -61,7 +61,7 @@
           <li> Dimensions: 80mm cube </li>
           <li> Handheld </li>
           <li> Cardboard </li>
-          <li> Hollow </li>
+          <li> Hollow and cubic </li>
           <li> Allows access to what's inside </li>
           </ul>
         </td>
@@ -86,7 +86,7 @@
           <li> Dimensions: 80mm cube </li>
           <li> Handheld </li>
           <li> Cardboard </li>
-          <li> Hollow </li>
+          <li> Hollow and rectangular </li>
           <li> Allows access to what's inside </li>
           <li> <b>Has an element of personality and temperament</b> </li>
           </ul>
@@ -107,22 +107,19 @@
         <td>Pringles scream box</td>
         <td>
           <ul>
-          <li> 6 sides, 8 vertices, 8 edges </li>
+          <li> 1 cylindrical side, 1 vertice, 2 edges </li>
           <li> Dimensions: 80mm cube </li>
           <li> Handheld </li>
-          <li> Cardboard </li>
-          <li> Hollow </li>
-          <li> Allows access to what's inside </li>
+          <li> Cardboard and Aluminium </li>
+          <li> Hollow and cylindrical </li>
+          <li> Invites screaming </li>
+          <li> Muffles screams </li>
           </ul>
         </td>
         <td>
           <ul>
-          <li> Throw/Shake </li>
-          <li> Topple </li>
-          <li> Spin </li>
-          <li> Contains something </li>
+          <li> Screaming (inside) </li>
           <li> Open/Close lid </li>
-          <li> Roll </li>
           </ul>
         </td>
       </tr>
