--- a/06.html
+++ b/06.html
@@ -112,8 +112,8 @@
           <li> Handheld </li>
           <li> Cardboard and Aluminium </li>
           <li> Hollow and cylindrical </li>
-          <li> Invites screaming </li>
-          <li> Muffles screams </li>
+          <li> <b>Invites screaming</b> </li>
+          <li> <b>Muffles screams</b> </li>
           </ul>
         </td>
         <td>
