--- a/06.html
+++ b/06.html
@@ -88,7 +88,7 @@
           <li> Cardboard </li>
           <li> Hollow and rectangular </li>
           <li> Allows access to what's inside </li>
-          <li> <b>Has an element of personality and temperament</b> </li>
+          <li> Has an element of personality and temperament </li>
           </ul>
         </td>
         <td>
@@ -112,8 +112,8 @@
           <li> Handheld </li>
           <li> Cardboard and Aluminium </li>
           <li> Hollow and cylindrical </li>
-          <li> <b>Invites screaming</b> </li>
-          <li> <b>Muffles screams</b> </li>
+          <li> Invites screaming </li>
+          <li> Muffles screams </li>
           </ul>
         </td>
         <td>
