--- a/06.html
+++ b/06.html
@@ -57,7 +57,7 @@
         <td>Box</td>
         <td>
           <ul>
-          <li> 6 sides, 8 vertices, 8 edges </li>
+          <li> 6 faces, 8 vertices, 8 edges </li>
           <li> Dimensions: 80mm cube </li>
           <li> Handheld </li>
           <li> Cardboard </li>
@@ -82,7 +82,7 @@
         <td>Pet box</td>
         <td>
           <ul>
-          <li> 6 sides, 8 vertices, 8 edges </li>
+          <li> 6 faces, 8 vertices, 8 edges </li>
           <li> Dimensions: 80mm cube </li>
           <li> Handheld </li>
           <li> Cardboard </li>
@@ -107,7 +107,7 @@
         <td>Pringles scream box</td>
         <td>
           <ul>
-          <li> 1 cylindrical side, 1 vertice, 2 edges </li>
+          <li> 1 cylindrical faces, 0 vertices, 2 edges </li>
           <li> Dimensions: 80mm cube </li>
           <li> Handheld </li>
           <li> Cardboard and Aluminium </li>
