--- a/06.html
+++ b/06.html
@@ -46,7 +46,7 @@
     <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Step1 : Object Analysis / Modelling</h2>
     <table style="width:80%; margin:30px auto; border-collapse:collapse;">
       <tr>
-        <th>Week no.</th>        
+        <th>Week No.</th>        
         <th>Object</th>
         <th>Property</th>
         <th>Method/Action</td>
