--- a/06.html
+++ b/06.html
@@ -107,7 +107,7 @@
         <td>Pringles scream box</td>
         <td>
           <ul>
-          <li> 1 cylindrical faces, 0 vertices, 2 edges </li>
+          <li> 1 face, 0 vertices, 2 edges </li>
           <li> Dimensions: 80mm cube </li>
           <li> Handheld </li>
           <li> Cardboard and Aluminium </li>
