--- a/01.html
+++ b/01.html
@@ -27,12 +27,13 @@
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px; background-color: snow">
     <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Class Exercise</h2>
     <p class="pcontent">
-      Today, we were introduced to HTML and CSS. This was the day that this website was born. We also tried connecting electrical components to the microbit via a breadboard.
+      Today, we were introduced to HTML and CSS. This was the day this website was born.
     </p>
     <br/>
     <p class="pcontent">
       <img style="text-align: center;" src="IMAGE/01_variableresistor.gif"; height="50%"> <br/>
       <br/>
+      We also tried connecting electrical components to the microbit via a breadboard.
       We used components like;
       <ul>
         <li>LED</li>
@@ -40,7 +41,9 @@
         <li>Variable resistors</li>
         <li>Connecting wires</li>
       </ul>
+    </p>
     <br/><br/>
+    <p class="pcontent">
       The biggest takeaway from this lesson was the basic knowledge of building a website from scratch. We explored various functions within a website:
       <ul>
         <li>Adding hyperlinks</li>
@@ -103,6 +106,7 @@
     </p>
     
       <img style="text-align: center;" src="IMAGE/01_shakecube.png"; width="800px"> <br/>
+      <img src="IMAGE/01_shakecubegif.gif.gif" alt="Chair_SitTwist" style="height: 215px;"> <br/>
       <figcaption style="text-align: center;">Box reacting to shaking.</figcaption> <br/>
       <img style="text-align: center;" src="IMAGE/01_spincube.png"; width="800px"> <br/>
       <figcaption style="text-align: center;">Box reacting to spinning.</figcaption><br/>
