--- a/01.html
+++ b/01.html
@@ -105,7 +105,7 @@
     <p class="pcontent">Specifically, a  transparent box. We thought a multiversatile cube that could facilitate many types of games, beyond just being a regular dice would be nice.
     </p>
     
-      <img style="text-align: center;" src="IMAGE/01_shakecube.png"; width="600px"> <br/>
+      <img style="text-align: center;" src="IMAGE/01_shakecube.png"; style="height: 215px;"> <br/>
       <img src="IMAGE/01_shakecubegif.gif" alt="Box_Shake" style="height: 215px;"> <br/>
       <figcaption style="text-align: center;">Box reacting to shaking.</figcaption> <br/>
       <img style="text-align: center;" src="IMAGE/01_spincube.png"; width="800px"> <br/>
