--- a/02.html
+++ b/02.html
@@ -70,7 +70,7 @@
         </div>
         <div class="column_5">
           <img src="IMAGE/02_box5.jpg" alt="box(5)" style="height: 150px;"> <br>
-          <p class="pcontent">A cube with a lid. This form was a choice with best of both worlds.</p>
+          <p class="pcontent">A cube with an attached lid. This form was a choice with the best of both worlds.</p>
         </div>
       </div>
     </p>
