--- a/06.html
+++ b/06.html
@@ -58,7 +58,7 @@
         <td>
           <ul>
           <li> 6 faces, 8 vertices, 8 edges </li>
-          <li> Dimensions: 80mm cube </li>
+          <li> Dimensions: 80mm x 80mm x 80mm </li>
           <li> Handheld </li>
           <li> Cardboard </li>
           <li> Hollow and cubic </li>
@@ -83,7 +83,7 @@
         <td>
           <ul>
           <li> 6 faces, 8 vertices, 8 edges </li>
-          <li> Dimensions: 80mm cube </li>
+          <li> Dimensions: 90mm x 120mm x 80mm </li>
           <li> Handheld </li>
           <li> Cardboard </li>
           <li> Hollow and rectangular </li>
@@ -108,7 +108,7 @@
         <td>
           <ul>
           <li> 1 face, 0 vertices, 2 edges </li>
-          <li> Dimensions: 80mm cube </li>
+          <li> Dimensions: ø72mm x 260mm </li>
           <li> Handheld </li>
           <li> Cardboard and Aluminium </li>
           <li> Hollow and cylindrical </li>
