--- a/06.html
+++ b/06.html
@@ -27,7 +27,7 @@
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px; background-color: snow">
     <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Class Exercise</h2>
     <p class="pcontent">
-      <i>Yuta shared the components he had with us. PUT WEEKLY HERE</i>
+      <i>Nil. Yuta shared the components he had with us.</i>
     </p>
   </div>
 
