--- a/01.html
+++ b/01.html
@@ -105,8 +105,8 @@
     <p class="pcontent">Specifically, a  transparent box. We thought a multiversatile cube that could facilitate many types of games, beyond just being a regular dice would be nice.
     </p>
     
-      <img style="text-align: center;" src="IMAGE/01_shakecube.png"; style="height: 215px;"> <br/>
-      <img src="IMAGE/01_shakecubegif.gif" alt="Box_Shake" style="height: 215px;"> <br/>
+      <img style="text-align: center;" src="IMAGE/01_shakecube.png"; style="height: 50%;"> <br/>
+      <img src="IMAGE/01_shakecubegif.gif" alt="Box_Shake" style="height: 50%;"> <br/>
       <figcaption style="text-align: center;">Box reacting to shaking.</figcaption> <br/>
       <img style="text-align: center;" src="IMAGE/01_spincube.png"; width="800px"> <br/>
       <figcaption style="text-align: center;">Box reacting to spinning.</figcaption><br/>
@@ -116,7 +116,7 @@
 <!-- ------------------------------------------ END OF WEEKLY CONTENT HERE ------------------------------------------------- -->
 
 <footer style="margin-left: -20px; margin-left: -300px; margin-right: -300px; margin-bottom: -200px;">
-  <br/>
+  <br/> 
     <br/>
     <br/>
    <p><a href="https://kiannelim.github.io/id2116/">back to home</a></p>
