--- a/02.html
+++ b/02.html
@@ -81,6 +81,7 @@
     
     
     <p class="pcontent">
+      We thought it might be interesting to create a cube that could facilitate many different games. Perhaps we could reinvent a dice to be more than a static cube which shows numbers! What if a cube can be a game in itself? <br/><br/>
       <a href="https://makecode.microbit.org/_068Uux1JHM68" target="_blank">Box Tilt with Music</a><br/><br/>
     </p>
 
