--- a/06.html
+++ b/06.html
@@ -25,9 +25,9 @@
 <body>
   <!-- ------------------------------------------ EDIT WEEKLY CONTENT HERE ------------------------------------------------- -->
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px; background-color: snow">
-    <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Class Exercise</h2>
+    <h2 style="font-size: 25px; font-weight: bold; text-align: left;">NEW HARDWARE CANDY</h2>
     <p class="pcontent">
-      <i>Yuta shared the components he had with us. PUT WEEKLY HERE</i>
+      <i>This week, Yuta shared with us interesting sensor components he had with us. PUT WEEKLY HERE</i>
     </p>
   </div>
 
@@ -37,11 +37,7 @@
     <p class="pcontent">
       <img style="text-align: center;" src="IMAGE/06_hardware.jpg"; width="50%"> <br/>
       <br/>
-      Some new candy hardware that we are experimenting with:
-      <ul>
-        <li>LCD screens</li>
-        <li>Sound sensor</li>
-      </ul>
+      
     <br/><br/>
     <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Step1 : Object Analysis / Modelling</h2>
     <table style="width:80%; margin:30px auto; border-collapse:collapse;">
