--- a/04.html
+++ b/04.html
@@ -39,21 +39,11 @@
     <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Microbit Project Progress</h2>
     <p class="pcontent">
       <!-- Need to sketch out (is this literal) what our OOP is, and state transition diagram. or is it the same? -->
-      “Mapping” [Audio, Visual, Physical] feedback with Object interaction.
-    <ul>
-      <li>Closed Box (with mewing sounds): [action] Open lid > [audio feedback] Mewing sounds stop</li>
-      <li>Closed Box (static colours): [action] Topple box > [visual feedback] video plays moving colours</li>
-      <li>Closed Box: [action] Open lid > [audio feedback] Orchestra sounds (maybe different actions will have different sounds)</li>
-      <li>Empty Box (with something in it): [action] takes out object (inside box) > [audio feedback] plays MC Hammer - You Can't Touch This.</li>
-    </ul>
+      We experimented with making a <a href="https://kiannelim.github.io/id2116/KIANNE/w4/temperFade/" target="_blank">transition</a> of facial expressions: <br/><br/>
     </p>
-    <img src="IMAGE/shakecube.png" alt="box(4)" style="height: 800px;"> <br>
-    <img src="IMAGE/spincube.png" alt="box(4)" style="height: 800px;"> <br>
-    <img src="IMAGE/tiltcubemusic.png" alt="box(4)" style="height: 800px;"> <br>
-    <img src="IMAGE/spincube.png" alt="box(4)" style="height: 800px;"> <br>
+    <iframe src="https://editor.p5js.org/kiannelim/embed/Cp-TxVvy"></iframe>
 
-    <img src="IMAGE/brainstorming1.jpg" alt="box(4)" style="height: 800px;"> <br>
-    <img src="IMAGE/brainstorming2.jpg" alt="box(4)" style="height: 800px;"> <br>
+    
     <img src="IMAGE/04_statetransitiondiagramdraft.jpg" alt="box(4)" style="height: 800px;"> <br>
   </div>
 <!-- ------------------------------------------ END OF WEEKLY CONTENT HERE ------------------------------------------------- -->
