--- a/04.html
+++ b/04.html
@@ -40,11 +40,13 @@
     <p class="pcontent">
       <!-- Need to sketch out (is this literal) what our OOP is, and state transition diagram. or is it the same? -->
       We experimented with making a <a href="https://kiannelim.github.io/id2116/KIANNE/w4/temperFade/" target="_blank">transition</a> of facial expressions: <br/><br/>
-    </p>
+    
     <iframe src="https://editor.p5js.org/kiannelim/embed/Cp-TxVvy"></iframe>
 
-    
+    <br/><br/>
+    Here's the a vesion of the state transition diagram that we tidied up.
     <img src="IMAGE/04_statetransitiondiagramdraft.jpg" alt="box(4)" style="height: 800px;"> <br>
+  </p>
   </div>
 <!-- ------------------------------------------ END OF WEEKLY CONTENT HERE ------------------------------------------------- -->
   <style>
