--- a/04.html
+++ b/04.html
@@ -44,8 +44,13 @@
     <iframe src="https://editor.p5js.org/kiannelim/embed/Cp-TxVvy"></iframe>
 
     <br/><br/>
-    Here's the a vesion of the state transition diagram that we tidied up.
-    <img src="IMAGE/04_statetransitiondiagramdraft.jpg" alt="box(4)" style="height: 800px;"> <br>
+    Here's the a version of the state transition diagram that we tidied up.
+    <img src="IMAGE/04_statetransitiondiagramdraft.jpg" alt="box(4)" style="height: 800px;"> 
+    <br/><br/>
+    And, this week, we learnt how to pair our microbit via bluetooth.
+    <img src="IMAGE/04_bluetooth.png.jpg" alt="box(4)" style="height: 800px;"> <br>
+
+
   </p>
   </div>
 <!-- ------------------------------------------ END OF WEEKLY CONTENT HERE ------------------------------------------------- -->
