--- a/05.html
+++ b/05.html
@@ -29,7 +29,7 @@
     <p class="pcontent">
       This week, we thought again about our state transition diagams and refined it further. <br/>
       Mostly, we tried to simplify it and build around a core idea. <br/>
-      The main feature of our pet box would be the interactive facial expressions.<br/><br/>
+      The main feature of our pet box would be the interactive facial expressions.<br/><br/></p>
 
       <div class="row_3">
         <div class="column_3">
@@ -47,7 +47,7 @@
           </p>
         </div>
       </div>
-
+      <p class="pcontent"></p>
       One of the limitation we tried to work around was that the audio input was based on volume and not voice recognition. <br/>
       It seemed rather silly to shout at a pet box. Kind of counter-intuitive, and why would anyone shout at their beloved pet??<br/><br/>
 
@@ -58,7 +58,7 @@
       This volume captured can be translated into some form of visual output. <br/><br/><br/>
       
       Check out this <a href="https://kiannelim.github.io/id2116/KIANNE/w5/rainbowvolume/"target="_blank"> rainbow audio meter</a>!
-
+      <br/><br/><br/>
       We had fun playing with it, and then we decided to jump back in to develop our pet box idea further. There's still potential in it. 
       And it's more interesting in terms of the different ways you could interact with the box. Instead of just shouting at it, 
       which was the only thing you could do with the rainbow audio meter.<br/>
