--- a/05.html
+++ b/05.html
@@ -75,7 +75,7 @@
     <img style="text-align: center;" src="IMAGE/05_statetransitiondiagramdraft (1).jpg"; width=80%;> <br/>
     <img style="text-align: center;" src="IMAGE/05_statetransitiondiagramdraft (2).jpg"; width=80%;> <br/><br/>
     <p class="pcontent">
-      Here's one of our microbit experiements.
+      Here's one of our microbit experiments.
     </p><br/>
     <img style="text-align: center;" src="IMAGE/05_petbox.png"; width=80%;> <br/>
   </div>
