--- a/06.html
+++ b/06.html
@@ -39,7 +39,7 @@
       <br/>
       
     <br/><br/>
-    <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Step1 : Object Analysis / Modelling</h2>
+    <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Object Analysis / Modelling</h2>
     <table style="width:80%; margin:30px auto; border-collapse:collapse;">
       <tr>
         <th>Week No.</th>        
