--- a/04.html
+++ b/04.html
@@ -48,7 +48,42 @@
     <img src="IMAGE/04_statetransitiondiagramdraft.jpg" alt="box(4)" style="height: 800px;"> 
     <br/><br/>
     And, this week, we learnt how to pair our microbit via bluetooth.
-    <img src="IMAGE/04_bluetooth.png.jpg" alt="box(4)" style="height: 800px;"> <br>
+    <img src="IMAGE/04_bluetooth.png" style="height: 800px;"> <br><br>
+    <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Object Analysis / Modelling</h2>
+    <table style="width:80%; margin:30px auto; border-collapse:collapse;">
+      <tr>
+        <th>Week No.</th>        
+        <th>Object</th>
+        <th>Property</th>
+        <th>Method/Action</td>
+      </tr>
+
+      <tr>
+        <td>2 - 5</td>
+        <td>Box</td>
+        <td>
+          <ul>
+          <li> 6 faces, 8 vertices, 8 edges </li>
+          <li> Dimensions: 80mm cube </li>
+          <li> Handheld </li>
+          <li> Cardboard </li>
+          <li> Hollow and cubic </li>
+          <li> Allows access to what's inside </li>
+          </ul>
+        </td>
+        <td>
+          <ul>
+          <li> Throw/Shake </li>
+          <li> Topple </li>
+          <li> Spin </li>
+          <li> Contains something </li>
+          <li> Open/Close lid </li>
+          <li> Roll </li>
+          </ul>
+      </td>
+      </tr>
+    </table>  
+
 
 
   </p>
