--- a/05.html
+++ b/05.html
@@ -57,7 +57,7 @@
       although no one can really hear what you are saying, there is a microbit inside the can still which measures how loud you scream.
       This volume captured can be translated into some form of visual output. <br/><br/><br/>
       
-      Check out this <a href="https://kiannelim.github.io/id2116/KIANNE/w5/rainbowvolume/"target="_blank"> rainbow audio meter</a>!
+      Check out this <a href="https://editor.p5js.org/kiannelim/sketches/ve6NIEct"target="_blank"> rainbow audio meter</a>!
       <br/><br/><br/>
       We had fun playing with it, and then we decided to jump back in to develop our pet box idea further. There's still potential in it. 
       And it's more interesting in terms of the different ways you could interact with the box. Instead of just shouting at it, 
@@ -75,7 +75,8 @@
     <img style="text-align: center;" src="IMAGE/05_statetransitiondiagramdraft (1).jpg"; width=80%;> <br/>
     <img style="text-align: center;" src="IMAGE/05_statetransitiondiagramdraft (2).jpg"; width=80%;> <br/><br/>
     <p class="pcontent">
-      Here's one of our microbit experiments.
+      Here's one of our microbit experiments. 
+      We wanted to experiment with a battery meter of sorts in the background to trigger different states of the pet.
     </p><br/>
     <img style="text-align: center;" src="IMAGE/05_petbox.png"; width=80%;> <br/>
   </div>
