--- a/06.html
+++ b/06.html
@@ -27,16 +27,27 @@
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px; background-color: snow">
     <h2 style="font-size: 25px; font-weight: bold; text-align: left;">NEW HARDWARE CANDY</h2>
     <p class="pcontent">
-      <i>This week, Yuta shared with us interesting sensor components he had with us. PUT WEEKLY HERE</i>
+      This week, Yuta shared with us some interesting sensors and actuators. <br/>
+      We experimented with:
+      <ul>
+        <li> LCD screens </li>
+        <li> Mini Projector </li>
+        <li> Sound Sensor </li>
+        </ul>
+        <img style="text-align: center;" src="IMAGE/06_hardware.jpg"; width="50%"> <br/>
     </p>
   </div>
 
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px;">
     <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Microbit Project Progress</h2>
     <p class="pcontent">
+
     <p class="pcontent">
-      <img style="text-align: center;" src="IMAGE/06_hardware.jpg"; width="50%"> <br/>
+      We tried out the mini projector, but thought that using a lcd screen to show the face on a box would be most pet-like! <br/>
+      <img style="text-align: center;" src="IMAGE/06_projector.GIF"; width="50%"> <br/>
       <br/>
+
+      Also, here's a recap of our Object Model analysis.
       
     <br/><br/>
     <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Object Analysis / Modelling</h2>
