--- a/KIANNE/kianne.html
+++ b/KIANNE/kianne.html
@@ -24,10 +24,10 @@
      </div>
 <body>
     <div class="columntext, bodytext">
-
-      <img src="IMAGE/KIANNE/images/kiannedp.png" alt="kiannedp" style="width:40%"> <br> <br>
           
-      <p>Kianne is a Singaporean industrial designer. Her story started with a delicious cup of fine arabica at a local coffee roastery where she worked alongside state-of-the-art coffee equipment. Captivated by how design and technology can come together to craft a lovely beverage and bring smiles to the table, she endeavours to design meaningful experiences. Her design strives for a balance between elegance and practicality.
+      <p>
+        <!--<img src="IMAGE/kiannedp.png" alt="kiannedp" style="width:40%">  <br> <br> -->
+        Kianne is a Singaporean industrial designer. Her story started with a delicious cup of fine arabica at a local coffee roastery where she worked alongside state-of-the-art coffee equipment. Captivated by how design and technology can come together to craft a lovely beverage and bring smiles to the table, she endeavours to design meaningful experiences. Her design strives for a balance between elegance and practicality.
   
       
       <div class="bodytext">
