--- a/06.html
+++ b/06.html
@@ -40,6 +40,16 @@
       <img style="text-align: center;" src="IMAGE/06_projector.GIF"; width="50%"> <br/>
       <br/>
 
+      <img style="text-align: center;" src="IMAGE/05_bluetooth.png"; width="50%"> <br/>
+
+      <br/>
+
+      In our attempts to use the micrphone component, we faced problems as the readings collected were very erractic.
+      Hence, we decided to use an external microphone. This also allowed us to achieve greater clarity in sensing audio changes.
+      <img style="text-align: center;" src="IMAGE/06_externalmic.jpg"; width="50%"> <br/>
+      
+      <br/><br/>
+
       Also, here's a recap of our Object Model analysis.
       
     <br/><br/>
