--- a/06.html
+++ b/06.html
@@ -40,7 +40,8 @@
       <img style="text-align: center;" src="IMAGE/06_projector.GIF"; width="50%"> <br/>
       <br/>
 
-      <img style="text-align: center;" src="IMAGE/05_bluetooth.png"; width="50%"> <br/>
+      We wanted to keep our pet box compact by using the bluetooth function.
+      <img style="text-align: center;" src="IMAGE/06_bluetooth.png"; width="50%"> <br/>
 
       <br/>
 
