--- a/06.html
+++ b/06.html
@@ -36,17 +36,19 @@
     <p class="pcontent">
 
     <p class="pcontent">
-      We tried out the mini projector, but thought that using a lcd screen to show the face on a box would be most pet-like! <br/>
+      To project our pet's face, we tried out the mini projector.
+      However, we thought that using a lcd screen to show the face on a box would be most pet-like! <br/>
       <img style="text-align: center;" src="IMAGE/06_projector.GIF"; width="50%"> <br/>
       <br/>
 
-      We wanted to keep our pet box compact by using the bluetooth function.
+      For our light inputs, we needed to use the microbit's built-in light sensors. Hence, we tried utilising the bluetooth function.
       <img style="text-align: center;" src="IMAGE/06_bluetooth.png"; width="50%"> <br/>
 
       <br/>
 
-      In our attempts to use the micrphone component, we faced problems as the readings collected were very erractic.
-      Hence, we decided to use an external microphone. This also allowed us to achieve greater clarity in sensing audio changes.
+      For our audio inputs, we tried to use the microphone component. However, we faced problems as the readings collected were very erractic.
+      Hence, we decided to use an external microphone instead. But every cloud has a silver lining - this allowed us to achieve greater clarity
+      in sensing audio changes!
       <img style="text-align: center;" src="IMAGE/06_externalmic.jpg"; width="50%"> <br/>
       
       <br/><br/>
