--- a/06.html
+++ b/06.html
@@ -38,19 +38,20 @@
     <p class="pcontent">
       To project our pet's face, we tried out the mini projector.
       However, we thought that using a lcd screen to show the face on a box would be most pet-like! <br/>
+      <br/>
       <img style="text-align: center;" src="IMAGE/06_projector.GIF"; width="50%"> <br/>
-      <br/>
+      <br/><br/>
 
-      For our light inputs, we needed to use the microbit's built-in light sensors. Hence, we tried utilising the bluetooth function.
+      For our light inputs, we needed to use the microbit's built-in light sensors. Hence, we tried utilising the bluetooth function.<br/>
+      <br/>
       <img style="text-align: center;" src="IMAGE/06_bluetooth.png"; width="50%"> <br/>
+      <br/><br/>
 
+      And for our audio inputs, we tried to use the microphone component. However, we faced problems as the readings collected were very erractic.
+      Hence, we decided to use an external microphone instead - a Blue Yeti. This detachment from the box made our pet less realistic,
+      but every cloud has a silver lining - this allowed us to achieve greater clarity in sensing audio changes! <br/>
       <br/>
-
-      For our audio inputs, we tried to use the microphone component. However, we faced problems as the readings collected were very erractic.
-      Hence, we decided to use an external microphone instead. But every cloud has a silver lining - this allowed us to achieve greater clarity
-      in sensing audio changes!
       <img style="text-align: center;" src="IMAGE/06_externalmic.jpg"; width="50%"> <br/>
-      
       <br/><br/>
 
       Also, here's a recap of our Object Model analysis.
