--- a/05.html
+++ b/05.html
@@ -27,7 +27,7 @@
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px; background-color: snow">
     <h2 style="font-size: 25px; font-weight: bold; text-align: left;">WEEKLY EXPERIMENTS</h2>
     <p class="pcontent">
-      <i>Nil.</i>
+      <i>Nil. This week, we only had consultations with Yuta.</i>
     </p>
   </div>
 
