--- a/06.html
+++ b/06.html
@@ -27,7 +27,7 @@
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px; background-color: snow">
     <h2 style="font-size: 25px; font-weight: bold; text-align: left;">NEW HARDWARE CANDY</h2>
     <p class="pcontent">
-      <i>Nil. Yuta shared the components he had with us.</i>
+      <i>Nil. This week, Yuta shared the components he had with us.</i>
     </p>
   </div>
 
@@ -54,7 +54,7 @@
       <img style="text-align: center;" src="IMAGE/06_externalmic.jpg"; width="50%"> <br/>
       <br/><br/>
 
-      Also, here's a recap of our Object Model analysis.
+      On a side note, here's a recap of our Object Model analysis.
       
     <br/><br/>
     <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Object Analysis / Modelling</h2>
@@ -138,6 +138,9 @@
         </td>
       </tr>
     </table>  
+
+    <br/><br/>
+
     </p>
     </p>
   </div>
