--- a/06.html
+++ b/06.html
@@ -140,6 +140,11 @@
     </table>  
 
     <br/><br/>
+    While we tried to make our audio code work for the pet box, we deviated and came to another idea - the Pringles Scream box!
+    This box aimed to help stressed-out folks transform their stress into a rainbow. The rainbow stretches as one screams louder.
+    <br/>
+      <img style="text-align: center;" src="IMAGE/06_rainbow.png"; width="50%"> <br/>
+    <br/><br/>
 
     </p>
     </p>
