--- a/06.html
+++ b/06.html
@@ -140,7 +140,7 @@
     </table>  
 
     <br/><br/>
-    <p>
+    <p class="pcontent">
     While we tried to make our audio code work for the pet box, we deviated and came to another idea - the Pringles Scream box!
     This box aimed to help stressed-out folks transform their stress into a rainbow. The rainbow stretches as one screams louder.
     <br/>
