--- a/06.html
+++ b/06.html
@@ -39,7 +39,7 @@
       To project our pet's face, we tried out the mini projector.
       However, we thought that using a lcd screen to show the face on a box would be most pet-like! <br/>
       <br/>
-      <img style="text-align: center;" src="IMAGE/06_lcd.png"; width="50%"> <br/>  
+      <img style="text-align: center;" src="IMAGE/06_lcdscreen.jpg"; width="50%"> <br/>  
       <img style="text-align: center;" src="IMAGE/06_projector.GIF"; width="50%"> <br/>
       <br/><br/>
 
@@ -145,7 +145,7 @@
     While we tried to make our audio code work for the pet box, we deviated and came to another idea - the Pringles Scream box!
     This box aimed to help stressed-out folks transform their stress into a rainbow. The rainbow stretches as one screams louder.
     <br/>
-    <img style="text-align: center;" src="IMAGE/06_pringlesbox.png"; width="50%"> <br/>  
+    <img style="text-align: center;" src="IMAGE/06_pringlesbox.jpg"; width="50%"> <br/>  
     <img style="text-align: center;" src="IMAGE/06_rainbow.png"; width="50%"> <br/>
     <br/><br/>
     </p>
