--- a/06.html
+++ b/06.html
@@ -39,8 +39,8 @@
       To project our pet's face, we tried out the mini projector.
       However, we thought that using a lcd screen to show the face on a box would be most pet-like! <br/>
       <br/>
-      <img style="text-align: center;" src="IMAGE/06_lcdscreen.jpg"; width="50%"> <br/>  
-      <img style="text-align: center;" src="IMAGE/06_projector.GIF"; width="50%"> <br/>
+      <img style="text-align: center;" src="IMAGE/06_lcdscreen.jpg"; height="200px"> 
+      <img style="text-align: center;" src="IMAGE/06_projector.GIF"; height="200px"> <br/>
       <br/><br/>
 
       For our light inputs, we needed to use the microbit's built-in light sensors. Hence, we tried utilising the bluetooth function.<br/>
