--- a/06.html
+++ b/06.html
@@ -39,8 +39,8 @@
       To project our pet's face, we tried out the mini projector.
       However, we thought that using a lcd screen to show the face on a box would be most pet-like! <br/>
       <br/>
-      <img style="text-align: center;" src="IMAGE/06_lcdscreen.jpg"; height="200px"> 
-      <img style="text-align: center;" src="IMAGE/06_projector.GIF"; height="200px"> <br/>
+      <img style="text-align: center;" src="IMAGE/06_lcdscreen.jpg"; height="250px"> 
+      <img style="text-align: center;" src="IMAGE/06_projector.GIF"; height="250px"> <br/>
       <br/><br/>
 
       For our light inputs, we needed to use the microbit's built-in light sensors. Hence, we tried utilising the bluetooth function.<br/>
@@ -145,8 +145,8 @@
     While we tried to make our audio code work for the pet box, we deviated and came to another idea - the Pringles Scream box!
     This box aimed to help stressed-out folks transform their stress into a rainbow. The rainbow stretches as one screams louder.
     <br/>
-    <img style="text-align: center;" src="IMAGE/06_pringlesbox.jpg"; width="50%"> <br/>  
-    <img style="text-align: center;" src="IMAGE/06_rainbow.png"; width="50%"> <br/>
+    <img style="text-align: center;" src="IMAGE/06_pringlesbox.jpg"; height="300px">  
+    <img style="text-align: center;" src="IMAGE/06_rainbow.png"; height="300px"> <br/>
     <br/><br/>
     </p>
 
