--- a/06.html
+++ b/06.html
@@ -144,8 +144,9 @@
     While we tried to make our audio code work for the pet box, we deviated and came to another idea - the Pringles Scream box!
     This box aimed to help stressed-out folks transform their stress into a rainbow. The rainbow stretches as one screams louder.
     <br/><br/>
-    <img style="text-align: center;" src="IMAGE/06_pringlesbox.jpg"; height="300px">  
-    <img style="text-align: center;" src="IMAGE/06_rainbow.png"; height="300px"> <br/>
+    <img style="text-align: center;" src="IMAGE/06_pringlesbox.jpg"; height="215px">  
+    <img style="text-align: center;" src="IMAGE/06_insidebox.jpg"; height="215px"> 
+    <img style="text-align: center;" src="IMAGE/06_rainbow.png"; height="215px"> <br/>
     <br/><br/>
     </p>
 
