--- a/05.html
+++ b/05.html
@@ -44,6 +44,11 @@
       We wanted to experiment with a battery meter of sorts in the background to trigger different states of the pet.
     </p><br/>
     <img style="text-align: center;" src="IMAGE/05_petbox.png"; width=80%;> <br/>
+
+    <p class="content">
+      In addition, we also wanted to control the microbit remotely so we tried to connect it to a mobile power source.
+      However, it did not seem to have enough power.
+    </p>
   </div>
 
 <!-- ------------------------------------------ END OF WEEKLY CONTENT HERE ------------------------------------------------- -->
