--- a/05.html
+++ b/05.html
@@ -47,7 +47,7 @@
 
     <p class="content">
       In addition, we also wanted to control the microbit remotely so we tried to connect it to a mobile power source.
-      However, it did not seem to have enough power.
+      However, it did not seem to have enough power, so we returned to using the computer.
     </p>
   </div>
 
