--- a/05.html
+++ b/05.html
@@ -45,7 +45,7 @@
     </p><br/>
     <img style="text-align: center;" src="IMAGE/05_petbox.png"; width=80%;> <br/>
 
-    <p class="content">
+    <p class="pcontent">
       In addition, we also wanted to control the microbit remotely so we tried to connect it to a mobile power source.
       However, it did not seem to have enough power, so we returned to using the computer.
     </p>
