--- a/KIANNE/kianne.html
+++ b/KIANNE/kianne.html
@@ -26,7 +26,7 @@
     <div class="columntext, bodytext">
           
       <p>
-        <img src="IMAGE/kiannedp.png" alt="kiannedp" style="width:40%"> <br/> <br/>
+        <!-- <img src="IMAGE/kiannedp.png" alt="kiannedp" style="width:40%"> <br/> <br/> -->
         Kianne is a Singaporean industrial designer. 
         Her story started with a delicious cup of fine arabica at a local coffee roastery 
         where she worked alongside state-of-the-art coffee equipment. 
