--- a/04.html
+++ b/04.html
@@ -33,19 +33,18 @@
       Besides that, we also learned about how to make a Neopixel (aka a strip of LED lights?) change colour.
       However, one disadvantage is that Bluetooth does not work on the Microbit while Neopixel is in use.
     </p>
+
+  
   </div>
 
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px;">
     <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Microbit Project Progress</h2>
     <p class="pcontent">
       <!-- Need to sketch out (is this literal) what our OOP is, and state transition diagram. or is it the same? -->
-      “Mapping” [Audio, Visual, Physical] feedback with Object interaction.
-    <ul>
-      <li>Closed Box (with mewing sounds): [action] Open lid > [audio feedback] Mewing sounds stop</li>
-      <li>Closed Box (static colours): [action] Topple box > [visual feedback] video plays moving colours</li>
-      <li>Closed Box: [action] Open lid > [audio feedback] Orchestra sounds (maybe different actions will have different sounds)</li>
-      <li>Empty Box (with something in it): [action] takes out object (inside box) > [audio feedback] plays MC Hammer - You Can't Touch This.</li>
-    </ul>
+      We tried to connect our microbit to bluetooth. 
+      <img style="text-align: center;" src="IMAGE/04_bluetooth.png"; width=80%;> <br/> <br/>
+      And we tidied up our thoughts from last week.
+      <img style="text-align: center;" src="IMAGE/04_statetransitiondiagramdraft.jpg"; width=80%;> <br/>
     </p>
   </div>
 <!-- ------------------------------------------ END OF WEEKLY CONTENT HERE ------------------------------------------------- -->
