--- a/06.html
+++ b/06.html
@@ -27,7 +27,14 @@
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px; background-color: snow">
     <h2 style="font-size: 25px; font-weight: bold; text-align: left;">NEW HARDWARE CANDY</h2>
     <p class="pcontent">
-      <i>Nil. This week, Yuta shared the components he had with us.</i>
+      This week, Yuta shared with us a bunch ofsensors and actuators.
+      <br/>We tried out a couple of hardware:
+      <ul>
+        <li>lcd screen</li>
+        <li>sound sensor</li>
+        <li>mini projector</li>
+      </ul>
+      <img style="text-align: center;" src="IMAGE/06_hardware.jpg"; width="50%"> <br/>
     </p>
   </div>
 
