--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
       
       <a href="https://kiannelim.github.io/id2116/05" target="_blank">
       <img src="IMAGE/GitHub raw-05.png" alt="WEEK 5" style="width: 300px"></a>
+
+      <a href="https://kiannelim.github.io/id2116/05" target="_blank">
+      <img src="IMAGE/GitHub raw-05.png" alt="WEEK 5" style="width: 300px"></a>
     </div>
 
     <div class="column_3">
