--- a/07.html
+++ b/07.html
@@ -33,9 +33,10 @@
 
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px;">
     <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Microbit Project Final Presentation and Exhibition</h2>
-    <img style="text-align: center;" src="IMAGE/07_exhibition (2).jpg"; width=100%;> <br/>
+    <img style="text-align: center;" src="IMAGE/07_exhibition (2).jpg"; width=800px;> <br/>
+    <img style="text-align: center;" src="IMAGE/07_poster.png"; width=800px;> <br/>
     <p class="pcontent">
-      ...
+      It's final Presentation!
     </p>
   </div>
 
