--- a/07.html
+++ b/07.html
@@ -33,6 +33,9 @@
 
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px;">
     <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Microbit Project Final Presentation and Exhibition</h2>
+    <p class="pcontent">
+      Click here for our <a href="https://editor.p5js.org/Char-hy/sketches/1LACpaY3" target="_blank">final</a> code.<br/><br/><br/>
+    </p>
     <img style="text-align: center;" src="IMAGE/07_exhibition (2).jpg"; width=800px;> <br/>
     <img style="text-align: center;" src="IMAGE/07_poster.png"; width=800px;> <br/>
   </div>
